@@ -12,10 +12,13 @@ namespace Mercator {
 /// \brief Surface shader that defines the surface above a given level.
 class HighShader : public Shader {
   private:
+    /// The level above which the shader renders.
     float m_threshold;
   public:
+    /// Key string used when specifying the threshold parameter.
     static const std::string key_threshold;
 
+    /// Default level above which the shader renders.
     static const float default_threshold;
 
     /// \brief Constructor
@@ -28,6 +31,7 @@ class HighShader : public Shader {
     explicit HighShader(const Parameters & params);
     virtual ~HighShader();
 
+    /// Accessor for level above which the shader renders.
     const float threshold() const { return m_threshold; }
 
     virtual bool checkIntersect(const Segment &) const;
@@ -40,8 +44,10 @@ class LowShader : public Shader {
     /// The level below which the shader renders.
     float m_threshold;
   public:
+    /// Key string used when specifying the threshold parameter.
     static const std::string key_threshold;
 
+    /// Default level below which the shader renders.
     static const float default_threshold;
 
     /// \brief Constructor
@@ -64,13 +70,19 @@ class LowShader : public Shader {
 /// \brief Surface shader that defines the surface between two levels.
 class BandShader : public Shader {
   private:
+    /// The level above which the shader renders.
     float m_lowThreshold;
+    /// The level below which the shader renders.
     float m_highThreshold;
   public:
+    /// Key string used when specifying the low threshold parameter.
     static const std::string key_lowThreshold;
+    /// Key string used when specifying the high threshold parameter.
     static const std::string key_highThreshold;
 
+    /// Default level above which the shader renders.
     static const float default_lowThreshold;
+    /// Default level below which the shader renders.
     static const float default_highThreshold;
 
     /// \brief Constructor
@@ -85,7 +97,9 @@ class BandShader : public Shader {
     explicit BandShader(const Parameters & params);
     virtual ~BandShader();
 
+    /// Accessor for the level above which the shader renders.
     const float lowThreshold() const { return m_lowThreshold; }
+    /// Accessor for the level below which the shader renders.
     const float highThreshold() const { return m_highThreshold; }
 
     virtual bool checkIntersect(const Segment &) const;
